--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Exp Tracker TS PWA",
+  "name": "Expense Tracker TypeScript and PWA",
   "icons": [
     {
       "src": "favicon.ico",
